--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 <body>
     <h1> Cliente en Vanilla JavaScript </h1>
 
+    <p>
+        Escribe un ID del producto deseado, dejalo vacio si quieres todos.
+    </p>
+    <input type="text" name="" id="idProducto" placeholder="id">
+    <button id="boton">Consultar</button>
+
+    <p>Resultado</p>
+    <textarea id="resultado" cols="30" rows="10"></textarea>
+
     <script src="js/main.js"></script>
 </body>
 </html>
