--- a/index.html
+++ b/index.html
@@ -4,20 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Document</title>
 </head>
 <body>
-    <h1> Cliente en Vanilla JavaScript </h1>
+    <main class="container m-4 spinner ">
+        <h1> Cliente en Vanilla JavaScript </h1>
+        <div class="row mt-4">
+            <div class="col border spinner">
+                <h5>Lista de productos</h5>
 
-    <p>
-        Escribe un ID del producto deseado, dejalo vacio si quieres todos.
-    </p>
-    <input type="text" name="" id="idProducto" placeholder="id">
-    <button id="boton">Consultar</button>
+                <ul id="lista-productos" class="list-group">
 
-    <p>Resultado</p>
-    <textarea id="resultado" cols="30" rows="10"></textarea>
+                </ul>
 
-    <script src="js/main.js"></script>
+            </div>
+            <div class="col border spinner">
+                <div class="form-group spinner">
+                    <div class="input-group mb-2 spinner">
+                        <input type="text" class="form-control spinner" name="" id="idProducto" placeholder="id">
+                            <div class="input-group-append">
+                                <button id="boton" class="btn btn-primary">Consultar</button>
+                            </div>
+                    </div>
+                </div>
+
+                <div id="producto" class="card d-none">
+                    <img id="imagen" src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 id="nombre" class="card-title">Nombre del producto</h5>
+                        <p id="descripcion" id="descripcion" class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+
+
+
 </body>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="js/main.js"></script>
 </html>
